fix video overlap. closes #85

--- a/less/app.less
+++ b/less/app.less
@@ -76,10 +76,15 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	height: 100%;
 	width: 100%;
 	display: none;
-}
-
-.video-wrapper iframe {
-	margin-top: 20px;
+	
+	.video-inner-wrapper {
+	    position: absolute;
+	    top: 0;
+	    right: 0;
+	    bottom: 0;
+	    left: 0;
+	    margin: auto;
+	}
 }
 
 //question that appears at the end of video
